# opencl-detour

./: CMakeLists.txt  LICENSE  README.md  opencl-detour.cpp
scripts/: opencl-log2code.py
